force-app/main/default/objects/Brand__c/fields/Date_Of_Earliest_Model__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Earliest_Model__c</fullName>
    <label>Date Of Earliest Model</label>
    <summarizedField>Model__c.Release_Date__c</summarizedField>
    <summaryForeignKey>Model__c.Brand__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>