force-app/main/default/objects/Brand__c/fields/Price_Of_Most_Exp_Modal__c.field-meta.xml
<CustomField>
    <fullName>Price_Of_Most_Exp_Modal__c</fullName>
    <label>Price Of Most Exp Modal</label>
    <summarizedField>Model__c.Price__c</summarizedField>
    <summaryForeignKey>Model__c.Brand__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>