force-app/main/default/objects/Brand__c/fields/Total_Devices_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Devices_in_Stock__c</fullName>
    <label>Total Devices in Stock</label>
    <summarizedField>Model__c.Stock__c</summarizedField>
    <summaryForeignKey>Model__c.Brand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>