force-app/main/default/objects/Brand__c/fields/Total_Number_Of_Models__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Models__c</fullName>
    <label>Total Number Of Models</label>
    <summaryForeignKey>Model__c.Brand__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>