force-app/main/default/objects/Brand__c/fields/Total_Number_Of_Models_After_1_1_2019__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Models_After_1_1_2019__c</fullName>
    <label>Total Number Of Models After 1/1/2019</label>
    <summaryFilterItems>
        <field>Model__c.Release_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Model__c.Brand__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>